--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "dependencies": {
     "core-js": "^3.8.3",
     "element-ui": "^2.15.13",
+    "less": "^4.1.3",
+    "less-loader": "^11.1.3",
     "vue": "^2.6.14",
     "vue-router": "^3.6.5"
   },
